# CahnHilliard

./: CMakeLists.txt
src/: BlockDiagonalPreconditioner.h  CH.cpp  CahnHilliard.cpp  CahnHilliard.h  InverseMatrix.h  main.cpp
